<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.sbtechincaltest.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_photosFragment"
            app:destination="@id/photosFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_graph"/>
    </fragment>
    <fragment
        android:id="@+id/photosFragment"
        android:name="com.example.sbtechincaltest.ui.photos.PhotosFragment"
        android:label="@string/photos"
        tools:layout="@layout/fragment_photos" />
</navigation>